# synaptics-recover

./: CMakeLists.txt  README.md  README_zh_CN.md  recover.py
.github/workflows/: win-build.yml
src/: CMakeLists.txt  WinResource.rc.in  main.cpp  synare.cpp  synare.h  winrc.cmake  winutils.cpp  winutils.h
src/app/: CMakeLists.txt  WinManifest.exe.manifest  WinResource.rc.in  main.cpp
src/synare/: CMakeLists.txt  synare.cpp  synare.h
src/winutils/: CMakeLists.txt  winutils.cpp  winutils.h
